fix tag list scrollbar

--- a/src/css/tag_list_block.css.scss
+++ b/src/css/tag_list_block.css.scss
@@ -9,7 +9,7 @@
   .tag-list__wrapper {
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 99vw;
     height: calc(100% - 170px);
     position: absolute;
     top: 160px;
